<resources>
    <string name="app_name">Kulibin Club</string>
    <string name="action_head">Главная</string>
    <string name="action_site">Сайт</string>
    <string name="action_kurs">Чему у нас учатся?</string>
    <string name="action_teacher">Почему детям нравится у нас?</string>
    <string name="action_price">Стоимость занятий</string>
    <string name="contacts">
        <b>Адрес:</b>\n
        - Московский проспект, 14Б, Чебоксары\n
        <b>Телефон:</b> (8352) 38-79-30 \n
        <b>Email:</b> kulibin.club@gmail.com\n
        <b>Администрация:</b> пн-пт: 9.00-18.00\n
        \n
        <b>Запись с 9.00 до 18.00 по телефону:</b>\n
            37-13-44 (89276671344) (Чебоксары: СЗР, ЮЗР) Анастасия\n
            68-58-65 (89023285865) (Чебоксары: центр, НЮР) Нина\n
            38-85-80 (89276688580) (Новочебоксарск) Светлана\n
    </string>
    <string name="logic">Не только знать, что такое цикл, условие,\n
        переменная, массив, но и уместно применять их.</string>
    <string name="mir">Видеть за окружающими объектами их внутренний механизм работы и структуру.</string>
    <string name="projects">Творить в условиях неопределённости, когда нет инструкций или действовать в чётких регламентах, подстраивая своё мышление под реализуемый проект.</string>
    <string name="liberty">Подбираем проекты, над которыми будет интересно работать вашему ребёнку.\nВовсе не обязательно делать всё по инструкции.</string>
    <string name="zero">Ребенок радуется, что может разобраться с трудными задачами и делать более интересные проекты.\nС восторгом показывает свои работы друзьям и родителям.</string>
    <string name="ycpex">Развиваем стремления к успеху.\nРешает олимпиадные задачи с помощью полученных знаний и умений.</string>
    <string name="price">
        Стоимость Вы можете уточнить у администратора филиала.\n
        Действуют льготы для малообеспечнных семей и для детей с ограниченными возможностями здоровья.\n
        При наличии абонемента за вами закрепляется место в группе на срок действия абонемента - записываться не нужно.\n
        При оплате за посещение каждого развивающего занятия отдельно - необходимо записываться.\n
        Перерасчет денежных средств за пропущенное занятие осуществляется в случаях:\n
        1) при предъявлении мед.справки или иного документа, свидетельствующего об уважительной причине пропуска;\n
        2) 1 раз в течение действия абонемента (т.е. 1 раз в месяц) при заблаговременном (не позднее 24 часов до начала занятия) информировании смс сообщением с указанием фамилии имени ребенка и группы в формате: место, день недели, время на номер Вашего администратора группы
    </string>
</resources>